update i18n and create project diag